<?xml version="1.0"?>
<package format="3">
  <name>op3_tuner_client</name>
  <version>0.1.0</version>
  <description>
     op3_tuner_client
  </description>
  <license>Apache License 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/op3_tuner_client</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/op3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Tools</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Tools/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>yaml-cpp</depend>
  <depend>std_msgs</depend>
  <depend>op3_tuning_module_msgs</depend>
  <export>                               
    <build_type>ament_cmake</build_type> 
  </export> 
</package>
