<?xml version="1.0"?>
<package format="2">
  <name>op3_walking_tuner</name>
  <version>0.2.0</version>
  <description>
    The op3_walking_tuner package
  </description>
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <author>Jay</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <url type="website">http://wiki.ros.org/op3_walking_tuner</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/op3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Tools</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Tools/issues</url>
  <build_depend>roscpp</build_depend>
  <depend>roscpp</depend>
  <depend>dynamixel_sdk</depend>
  <depend>robotis_framework_common</depend>
  <depend>robotis_device</depend>
  <depend>robotis_controller</depend>
  <depend>robotis_controller_msgs</depend>  
  <depend>robotis_math</depend>    
  <depend>cmake_modules</depend>  
  <depend>op3_base_module</depend>  
  <depend>op3_walking_module</depend>
  <depend>op3_walking_module_msgs</depend>  
  <depend>cm_740_module</depend>
</package>
