<?xml version="1.0"?>
<package format="2">
  <name>op3_web_setting_tool</name>
  <version>0.0.1</version>
  <description>The op3_web_setting_tool package</description>

  <license>Apache License 2.0</license>
  <author email="kmjung@robotis.com">kayman</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosbridge_server</build_depend>
  <build_depend>web_video_server</build_depend>
  <build_export_depend>rosbridge_server</build_export_depend>
  <build_export_depend>web_video_server</build_export_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>web_video_server</exec_depend>

  <export></export>
</package>
